# flood-prediction-system

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_docker.ps1  run_project.ps1  search.txt  test_glofas_quick.py
api/: dependencies.py  main.py  schemas.py
api/routers/: __init__.py  gauges.py  predictions.py  risk_maps.py
config/: logging_config.py  settings.py
dashboard/: app.py  style.py
dashboard/pages/: 01_🌊_Live_Monitor.py  02_🗺️_Risk_Maps.py  03_📈_Forecasts.py  04_📊_Analytics.py
docker/: Dockerfile.api  Dockerfile.dashboard  docker-compose.yml
scripts/: download_dem.py  feature_generation.py  ingest_all_data.py  prepare_lstm_dataset.py  preprocess_pipeline.py  quick_start_train.py  train_flood_model.py
src/: __init__.py  architecture_map.py
src/evaluation/: metrics.py
src/features/: __init__.py  lulc_change.py  precipitation.py  sar_processing.py  terrain.py
src/geospatial/: __init__.py  dem_processing.py  raster_utils.py  vector_utils.py
src/ingestion/: atmospheric.py  dem_loader.py  glofas.py  offline_dataset.py  sentinel_sar.py  stream_gauges.py
src/models/: engine.py  ensemble.py  lstm_forecaster.py  spatial_susceptibility.py
src/models/training/: __init__.py  train_lstm.py  train_xgboost.py
src/utils/: copernicus_auth.py  data_validation.py  metrics_logger.py  scalability.py
tests/: test_api.py  test_ingestion.py  test_lstm.py  test_metrics.py  test_pipeline.py  test_terrain.py
